force-app/main/default/objects/AgentReward__e/AgentReward__e.object-meta.xml
<CustomObject>
    <description>Async bridge between agent sessions and the reward engine. Published by after_reasoning hooks, consumed by AgentRewardTrigger.</description>
    <label>Agent Reward</label>
    <pluralLabel>Agent Rewards</pluralLabel>
</CustomObject>