force-app/main/default/objects/AgentReward__e/fields/Agent_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Api_Name__c</fullName>
    <label>Agent Api Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>