force-app/main/default/objects/AgentReward__e/fields/Domain_Event__c.field-meta.xml
<CustomField>
    <fullName>Domain_Event__c</fullName>
    <description>The raw domain outcome event the subagent reported (e.g. &quot;resolved&quot;, &quot;unresolved&quot;, &quot;case_created&quot;). Classified to success/failure by AgentRewardHandler via AgentSubagentConfig.outcome_mapping_json — the platform decides meaning, not the agent.</description>
    <label>Domain Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>