force-app/main/default/objects/AgentReward__e/fields/Lesson_Id__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Id__c</fullName>
    <label>Lesson Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>