force-app/main/default/objects/AgentReward__e/fields/Lesson_Was_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Was_Helpful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lesson Was Helpful</label>
    <type>Checkbox</type>
</CustomField>