force-app/main/default/objects/AgentReward__e/fields/Reward_Category__c.field-meta.xml
<CustomField>
    <fullName>Reward_Category__c</fullName>
    <description>Category of the reported reward event: &quot;lesson&quot; (a surfaced lesson was applied), &quot;goal&quot; (the subagent&apos;s goal outcome), or &quot;creation&quot; (a new lesson was recorded). AgentRewardHandler composes the canonical reward action as category + classified outcome (e.g. lesson + success = lesson_applied_success).</description>
    <label>Reward Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>