force-app/main/default/objects/AgentReward__e/fields/Topic_Area__c.field-meta.xml
<CustomField>
    <fullName>Topic_Area__c</fullName>
    <label>Topic Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>